--- a/loteriacarlos2/config/database.yml
+++ b/loteriacarlos2/config/database.yml
@@ -20,19 +20,21 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-  hoost: localhost
-  user: postgres
+
+  host: localhost
+  username: postgres
   password: postgres
+
 
 development:
   <<: *default
-  database: loteriacarlos_development
+  database: loteriacarlos2_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: loteriacarlos
+  #username: loteriacarlos2
 
   # The password associated with the postgres role (username).
   #password:
@@ -60,7 +62,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: loteriacarlos_test
+  database: loteriacarlos2_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +85,6 @@ test:
 #
 production:
   <<: *default
-  database: loteriacarlos_production
-  username: loteriacarlos
-  password: <%= ENV['LOTERIACARLOS_DATABASE_PASSWORD'] %>
+  database: loteriacarlos2_production
+  username: loteriacarlos2
+  password: <%= ENV['LOTERIACARLOS2_DATABASE_PASSWORD'] %>
