--- a/sample_app/test/fixtures/users.yml
+++ b/sample_app/test/fixtures/users.yml
@@ -16,9 +16,10 @@ archer:
 lana:
   name: Lana Kane
   email: hands@example.gov
-  password_digest: <%= User.digest('password') 
+  password_digest: <%= User.digest('password') %>
   activated: true
   activated_at: <%= Time.zone.now %>
+  
 malory:
   name: Malory Archer
   email: boss@example.gov
